--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -191,7 +191,7 @@
 
 
 				<div>
-					<button class="filter-button" type="submit">Apply Filter</button>
+					<button class="filter-button" type="submit" asp-area="">Apply Filter</button>
 				</div>
 
 			</section>
