--- a/Xcelerate/Views/Ad/Create.cshtml
+++ b/Xcelerate/Views/Ad/Create.cshtml
@@ -237,7 +237,7 @@
 		</section>
 
 		<section class="button-object">
-			<button class="submit-button" type="submit">SUMBIT FORM</button>
+			<button class="submit-button" asp-area="" type="submit">SUMBIT FORM</button>
 		</section>
 	</form>
 </article>
