--- a/Xcelerate/wwwroot/css/Admin/Home/Index.css
+++ b/Xcelerate/wwwroot/css/Admin/Home/Index.css
@@ -106,6 +106,8 @@ svg {
     overflow-y: scroll;
     height: 350px;
     width: 400px;
+    position: relative;
+    bottom: 40px;
 }
 
     .list-car-ad-reviews li strong {
@@ -169,9 +171,66 @@ svg {
     border-bottom: 1px solid black;
     width: 420px;
     margin: 10px 270px 0px auto;
+    position: relative;
+    bottom: 50px;
 }
 
 .instructions-reviews {
     color: white;
     text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    font-size: large;
+}
+
+.no-reviews-message {
+    color: white;
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    font-size: large;
+}
+
+.news-title {
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    color: whitesmoke;
+    font-size: 19px;
+}
+
+.generate-button {
+    position: absolute;
+    left: 465px;
+    top: 220px;
+    border-radius: 15px;
+}
+
+.news-content {
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 17px;
+}
+
+.pagination-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.page-list {
+    display: flex;
+    gap: 28px;
+    list-style: none;
+}
+
+.page-item a {
+    color: white;
+    text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.page-link {
+    border-radius: 12px;
+    padding: 15px;
+    background: none;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+    font-size: 18px;
+    text-decoration: none;
 }
