--- a/Xcelerate/Views/Ad/UserAds.cshtml
+++ b/Xcelerate/Views/Ad/UserAds.cshtml
@@ -1,4 +1,5 @@
-﻿@using Xcelerate.Infrastructure.Data.Enums
+﻿@using Xcelerate.Core.Models.Sorting
+@using Xcelerate.Infrastructure.Data.Enums
 @model AdInformationViewModel
 
 <link rel="stylesheet" href="~/css/Ad/UserAds.css" asp-append-version="true" />
@@ -7,19 +8,18 @@
 		<h1 class="title-text">Filter and Sort your search!</h1>
 		<section class="information-inputs">
 			<div class="form-input">
-				<label for="sorting">Sorting</label>
-				<select name="sorting" id="sorting" onchange="this.form.submit()">
-					<option value="0">Default</option>
-					<option value="1">Price Ascending</option>
-					<option value="2">Price Descending</option>
-					<option value="3">Year Ascending</option>
-					<option value="4">Year Descending</option>
-					<!-- Add other sorting options as needed -->
+				<label for="sorting-select">Sorting</label>
+				<select name="Sorting" asp-for="@Model.Sorting" id="sorting-select" onchange="this.form.submit()">
+					@foreach (var sorting in Enum.GetValues(typeof(SortingEnums)))
+					{
+						<option value="@sorting">@sorting</option>
+					}
 				</select>
+				<span asp-validation-for="@Model.EuroStandard" class="text-danger"></span>
 			</div>
 
 			<div class="form-input">
-				<label asp-for="@Model.Brand">Brand</label>
+				<label for="brand-select">Brand</label>
 				<select name="Brand" asp-for="@Model.Brand" id="brand-select" onchange="this.form.submit()">
 					@foreach (var brandType in Enum.GetValues(typeof(BrandsEnum)))
 					{
@@ -32,6 +32,11 @@
 			<div class="form-input">
 				<label for="model">Model</label>
 				<input type="text" name="model" id="model" value="@Model.Model" placeholder="Enter model">
+			</div>
+
+			<div class="form-input">
+				<label for="manufacturer">Manufacturer</label>
+				<input type="text" name="manufacturer" id="manufacturer" value="@Model.Manufacturer" placeholder="Enter manufacturer">
 			</div>
 
 			<div class="form-input">
@@ -61,55 +66,55 @@
 				<input type="number" name="maxMileage" id="maxMileage" value="@Model.MaxMileage" placeholder="Enter max mileage">
 			</div>
 
-			<div class="form-input">
-				<label for="endYear">End Year</label>
-				<select name="endYear" id="endYear">
-					<option value="">Select End Year</option>
-					@{
-						var endCurrentYear = DateTime.Now.Year;
-						for (int year = endCurrentYear; year >= 1900; year--)
-						{
-							if (Model.EndYear == year)
-							{
-								<text>
-								<option value="@year" selected>@year</option></text>
-							}
-							else
-							{
-								<text>
-								<option value="@year">@year</option></text>
-							}
-						}
-					}
-				</select>
-			</div>
-			<div class="form-input">
-				<label for="startYear">Start Year</label>
-				<select name="startYear" id="startYear">
-					<option value="">Select Start Year</option>
-					@{
-						var startCurrentYear = DateTime.Now.Year;
-						for (int year = startCurrentYear; year >= 1900; year--)
-						{
-							if (Model.StartYear == year)
-							{
-								<text>
-								<option value="@year" selected>@year</option></text>
-							}
-							else
-							{
-								<text>
-								<option value="@year">@year</option></text>
-							}
-						}
-					}
-				</select>
-			</div>
 
 			<div class="second-form-inputs">
 
 				<div class="form-input">
-					<label asp-for="@Model.EuroStandard">Euro Standard</label>
+					<label for="endYear">End Year</label>
+					<select name="endYear" id="endYear">
+						<option value="">Select End Year</option>
+						@{
+							var endCurrentYear = DateTime.Now.Year;
+							for (int year = endCurrentYear; year >= 1900; year--)
+							{
+								if (Model.EndYear == year)
+								{
+									<text>
+									<option value="@year" selected>@year</option></text>
+								}
+								else
+								{
+									<text>
+									<option value="@year">@year</option></text>
+								}
+							}
+						}
+					</select>
+				</div>
+				<div class="form-input">
+					<label for="startYear">Start Year</label>
+					<select name="startYear" id="startYear">
+						<option value="">Select Start Year</option>
+						@{
+							var startCurrentYear = DateTime.Now.Year;
+							for (int year = startCurrentYear; year >= 1900; year--)
+							{
+								if (Model.StartYear == year)
+								{
+									<text>
+									<option value="@year" selected>@year</option></text>
+								}
+								else
+								{
+									<text>
+									<option value="@year">@year</option></text>
+								}
+							}
+						}
+					</select>
+				</div>
+				<div class="form-input">
+					<label for="eurostandard-select">Euro Standard</label>
 					<select name="EuroStandard" asp-for="@Model.EuroStandard" id="eurostandard-select" onchange="this.form.submit()">
 						@foreach (var standard in Enum.GetValues(typeof(EuroStandardEnum)))
 						{
@@ -119,7 +124,7 @@
 					<span asp-validation-for="@Model.EuroStandard" class="text-danger"></span>
 				</div>
 				<div class="form-input">
-					<label asp-for="@Model.FuelType">Fuel Type</label>
+					<label for="fueltype-select">Fuel Type</label>
 					<select name="FuelType" asp-for="@Model.FuelType" id="fueltype-select" onchange="this.form.submit()">
 						@foreach (var fuelType in Enum.GetValues(typeof(FuelTypeEnum)))
 						{
@@ -130,7 +135,7 @@
 				</div>
 
 				<div class="form-input">
-					<label asp-for="@Model.Colour">Colour</label>
+					<label for="colour-select">Colour</label>
 					<select name="Colour" asp-for="@Model.Colour" id="colour-select" onchange="this.form.submit()">
 						@foreach (var colour in Enum.GetValues(typeof(ColourEnum)))
 						{
@@ -141,7 +146,7 @@
 				</div>
 
 				<div class="form-input">
-					<label asp-for="@Model.Transmission">Transmission</label>
+					<label for="transmission-select">Transmission</label>
 					<select name="Transmission" asp-for="@Model.Transmission" id="transmission-select" onchange="this.form.submit()">
 						@foreach (var transmission in Enum.GetValues(typeof(TransmissionEnum)))
 						{
@@ -152,7 +157,7 @@
 				</div>
 
 				<div class="form-input">
-					<label asp-for="@Model.DriveTrain">Drive Train</label>
+					<label for="drivetrain-select">Drive Train</label>
 					<select name="DriveTrain" asp-for="@Model.DriveTrain" id="drivetrain-select" onchange="this.form.submit()">
 						@foreach (var driveTrainType in Enum.GetValues(typeof(DriveTrainEnum)))
 						{
@@ -163,7 +168,7 @@
 				</div>
 
 				<div class="form-input">
-					<label asp-for="@Model.BodyType">Body Type</label>
+					<label for="bodytype-select">Body Type</label>
 					<select name="BodyType" asp-for="@Model.BodyType" id="bodytype-select" onchange="this.form.submit()">
 						@foreach (var bodyType in Enum.GetValues(typeof(BodyTypeEnum)))
 						{
@@ -174,7 +179,7 @@
 				</div>
 
 				<div class="form-input">
-					<label asp-for="@Model.Condition">Condition</label>
+					<label for="condition-select">Condition</label>
 					<select name="Condition" asp-for="@Model.Condition" id="condition-select" onchange="this.form.submit()">
 						@foreach (var condition in Enum.GetValues(typeof(ConditionEnum)))
 						{
@@ -188,7 +193,7 @@
 
 
 			<div>
-				<button class="filter-button" type="submit">Apply Filter</button>
+				<button class="filter-button" type="submit" asp-area="">Apply Filter</button>
 			</div>
 
 		</section>
@@ -212,25 +217,6 @@
 					   href="@Url.Action("UserAds", "Ad", new
                             {
                                 currentPage = Model.Pager.CurrentPage - 1,
-								year = Model.Year,
-								EuroStandard = Model.EuroStandard,
-								fuelType = Model.FuelType,
-								colour = Model.Colour,
-								transmission = Model.Transmission,
-								driveTrain = Model.DriveTrain,
-								bodyType = Model.BodyType,
-								condition = Model.Condition
-                            })">Previous</a>
-				</li>
-			}
-
-			@for (int page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
-			{
-				<li class="page-item">
-					<a class="page-link @(page == Model.Pager.CurrentPage ? "active" : "")"
-					   href="@Url.Action("UserAds", "Ad", new{
-                                currentPage = page,
-								year = Model.Year,
 								EuroStandard = Model.EuroStandard,
 								fuelType = Model.FuelType,
 								colour = Model.Colour,
@@ -245,6 +231,35 @@
 								minHorsePower = Model.MinHorsePower,
 								maxHorsePower = Model.MaxHorsePower,
 								brand = Model.Brand,
+								manufacturer = Model.Manufacturer,
+                                minMileage = Model.MinMileage,
+                                maxMileage = Model.MaxMileage,
+                                sorting = Model.Sorting
+                            })">Previous</a>
+				</li>
+			}
+
+			@for (int page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
+			{
+				<li class="page-item">
+					<a class="page-link @(page == Model.Pager.CurrentPage ? "active" : "")"
+					   href="@Url.Action("UserAds", "Ad", new{
+                                currentPage = page,
+								EuroStandard = Model.EuroStandard,
+								fuelType = Model.FuelType,
+								colour = Model.Colour,
+								transmission = Model.Transmission,
+								driveTrain = Model.DriveTrain,
+								bodyType = Model.BodyType,
+								condition = Model.Condition,
+								minPrice = Model.MinPrice,
+                                maxPrice = Model.MaxPrice,
+                                startYear = Model.StartYear,
+                                endYear = Model.EndYear,
+								minHorsePower = Model.MinHorsePower,
+								maxHorsePower = Model.MaxHorsePower,
+								brand = Model.Brand,
+								manufacturer = Model.Manufacturer,
                                 minMileage = Model.MinMileage,
                                 maxMileage = Model.MaxMileage,
                                 sorting = Model.Sorting
@@ -258,7 +273,6 @@
 					<a class="page-link"
 					   href="@Url.Action("UserAds", "Ad", new{
                                 currentPage = Model.Pager.CurrentPage + 1,
-								year = Model.Year,
 								EuroStandard = Model.EuroStandard,
 								fuelType = Model.FuelType,
 								colour = Model.Colour,
@@ -273,6 +287,7 @@
 								minHorsePower = Model.MinHorsePower,
 								maxHorsePower = Model.MaxHorsePower,
 								brand = Model.Brand,
+								manufacturer = Model.Manufacturer,
                                 minMileage = Model.MinMileage,
                                 maxMileage = Model.MaxMileage,
                                 sorting = Model.Sorting
@@ -345,7 +360,7 @@
 
 		@TempData.Remove("ConfirmDelete")
 		@TempData.Remove("CarIdToDelete")
-					}
+											}
 		});
 	</script>
 }
