--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -381,6 +381,10 @@ select:focus {
     width: 90px;
 }
 
+#manufacturer {
+    width: 120px;
+}
+
 #minHorsePower {
     width: 91px;
 }
@@ -421,7 +425,7 @@ select:focus {
     border-radius: 15px;
     margin-top: 88px;
     position: relative;
-    right: 342%;
+    right: 415%;
 }
 
 .second-form-inputs {
@@ -429,4 +433,3 @@ select:focus {
     margin-left: 122px;
     grid-column-gap: 13px;
 }
-
