--- a/Xcelerate/wwwroot/css/Admin/Home/Index.css
+++ b/Xcelerate/wwwroot/css/Admin/Home/Index.css
@@ -198,6 +198,7 @@ svg {
     left: 465px;
     top: 220px;
     border-radius: 15px;
+    background: linear-gradient(180deg, #5742ab, rgba(255, 255, 255, 0.2));
 }
 
 .news-content {
